--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -205,3 +205,28 @@ note = {(Accessed on 02/08/2018)}
   year={2009},
   organization={IEEE}
 }
+
+@book{fowler2002patterns,
+  title={Patterns of enterprise application architecture},
+  author={Fowler, Martin},
+  year={2002},
+  publisher={Addison-Wesley Longman Publishing Co., Inc.}
+}
+
+@misc{MappingO38:online,
+author = {Scott W. Ambler},
+title = {Mapping Objects to Relational Databases: O/R Mapping In Detail},
+howpublished = {\url{http://agiledata.org/essays/mappingObjects.html}},
+month = {Apr},
+year = {2013},
+note = {(Accessed on 02/20/2018)}
+}
+
+@misc{zzzeekPa13:online,
+author = {Mike Bayer},
+title = {zzzeek : Patterns Implemented by SQLAlchemy},
+howpublished = {\url{http://techspot.zzzeek.org/2012/02/07/patterns-implemented-by-sqlalchemy/}},
+month = {Feb},
+year = {2002},
+note = {(Accessed on 02/20/2018)}
+}
